# rp

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
rp/: __init__.py  config.py  exceptions.py  logger.py  netbox.py  truth.py
rp/models/: _common.py  as_path.py  as_path_group.py  community.py  config.py  policy.py  prefix_list.py  route_filter_list.py
rp/templates/: as-path-group.json  as-path.json  community.json  policy-filter-bogons.json  prefix-list.json  route-filter-list-bogons4.json  test.json
